Codegen for LInteger (bug 674099, r=dvander)